[project]
name = "geospace"
version = "0.5.2"
description = "Geospatial processing library based on GDAL and Google Earth Engine"
readme = "README.md"
license = "MIT"
authors = [{ name = "Cody James", email = "xiejx5@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "gdal",
    "pandas",
    "openpyxl",
    "tqdm",
]

[project.optional-dependencies]
gee = [
    "requests",
    "earthengine-api",
]
mask = [
    "cartopy",
    "scikit-image",
]

[dependency-groups]
dev = [
    "ipykernel<7",
]

[project.urls]
homepage = "https://github.com/xiejx5/geospace"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "geospace"
module-root = ""
